<resources>
    <string name="app_name">Restaurants FIAP</string>

    <!-- SPLASH SCREEN -->
    <string name="erro_api">Error while load application. Try again later</string>

    <!-- TELA DE LOGIN -->
    <string name="titulo_login">Log in</string>
    <string name="label_login">Username</string>
    <string name="label_senha">Password</string>
    <string name="label_logado">Keep me logged in</string>
    <string name="label_botao_entrar">Sign in</string>
    <string name="login_vazio">Username can\'t be blank</string>
    <string name="senha_vazia">Password can\'t be blank</string>
    <string name="erro_usuario">Error while sign in. Try again later</string>
    <string name="erro_login">Username or password are incorrect. Try again later</string>

    <!-- TELA DASHBOARD -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="lista_vazia">You don\'t have any restaurant yet :(</string>
    <string name="sucesso_deleta">Restaurant deleted successfully</string>

    <!-- MENU -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_salvar">Save</string>
    <string name="nav_novo_restaurante">New restaurant</string>
    <string name="nav_sobre">About the app</string>
    <string name="nav_sair">Log out</string>
    <string name="menu_editar">Edit</string>
    <string name="menu_deletar">Delete</string>

    <!-- TELA SOBRE -->
    <string name="titulo_sobre">About the app</string>
    <string name="nome_dev">Kako Botasso</string>

    <!-- TELA FORM -->
    <string name="titulo_form">Restaurant form</string>
    <string name="label_form_nome">Restaurant\'s name</string>
    <string name="erro_form_nome">Restaurant\'s name can\'t be blank</string>
    <string name="label_form_pedido">What did you order to eat?</string>
    <string name="erro_form_pedido">Order can\'t be blank</string>
    <string name="label_form_opiniao">What\'s your opinion?</string>
    <string name="erro_form_opiniao">Opinion can\'t be blank</string>
    <string name="sucesso_form">Restaurant saved successfully</string>
    <string name="sucesso_edita_form">Restaurant updated successfully</string>

</resources>
