<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.com.kakobotasso.restaurantesfiap.LoginActivity"
    android:orientation="vertical"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_login"
            android:layout_marginBottom="16dp"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_senha"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/check_manter_logado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_logado"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_botao_entrar"
        android:onClick="logaUsuario"
        />

</LinearLayout>
