<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.kakobotasso.restaurantesfiap.FormRestauranteActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/form_nome_restaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_form_nome"
            android:layout_marginBottom="16dp"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/form_pedido_restaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_form_pedido"
            android:layout_marginBottom="16dp"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/form_opiniao_restaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_form_opiniao"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp"
            />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
